@@ -4,5 +4,8 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
  [Added / runtime requires]
  - Dist::Zilla::Util::ConfigDumper
 
+ [Added / test requires]
+ - Dist::Zilla::Util::Test::KENTNL 1.003001
+
 0.001001 2014-08-15T21:16:43Z
 
